<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/successful_registration_bg"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="62dp"
                android:src="@drawable/plane_verify" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_margin="@dimen/activity_margin_max">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/registration_message_head"
                    android:id="@+id/textView"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/abc_text_size_display_1_material"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/registration_message"
                    android:id="@+id/textView2"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/registration_message_subhead"
                    android:id="@+id/textView3"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="@dimen/abc_text_size_medium_material" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="VERIFY"
                    android:id="@+id/btnVerify"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector"
                    android:textSize="@dimen/abc_text_size_menu_material"
                    android:textColor="#005444"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_margin_max" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>