<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="@dimen/app_icon_size_actionbar"
                        android:layout_height="@dimen/app_icon_size_actionbar"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/button_navbar_back" />

                    <TextView
                        android:id="@+id/lblTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/app_reload_ewallet"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#ffffff" />


                    <ImageView
                        android:id="@+id/expanded_menu"
                        android:layout_width="@dimen/app_icon_size_actionbar"
                        android:layout_height="@dimen/app_icon_size_actionbar"
                        android:layout_alignParentLeft="false"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_navigation_menu" />


                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout4"
        android:layout_below="@+id/view2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin_min"
            android:layout_marginLeft="@dimen/activity_margin_20dp"
            android:layout_marginRight="@dimen/activity_margin_20dp"
            android:layout_marginTop="@dimen/activity_min_padding"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_ewallet_header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/app_ewallet_desc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_currency" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/activity_margin_20dp"
            android:layout_marginRight="@dimen/activity_margin_20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/app_subtext_color">

                <estansaas.fonebayad.view.FormSelector
                    android:id="@+id/txtBillCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/textbox_selector"
                    android:ems="10"
                    android:paddingBottom="@dimen/abc_control_padding_material"
                    android:singleLine="true"
                    android:textColor="@color/app_color"
                    android:textColorHint="@color/app_subtext_color" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_30dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_margin_max"
            android:layout_marginRight="@dimen/activity_margin_max"
            android:background="@drawable/button_selector"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="SUBMIT"
            android:textColor="#005444"
            android:textSize="@dimen/abc_text_size_menu_material" />
    </LinearLayout>

</RelativeLayout>